src/parser_bump/snapshots/simp__parser_bump__tests__tests__inputs__valid__stmt_fn_single_param.snap
---
source: src/parser_bump/tests.rs
expression: parse(&input)
---
StmtFn {
    name: IdentId {
        raw: 1,
    },
    params: [
        IdentId {
            raw: 2,
        },
    ],
    body: Block {
        body: [],
        tail: None,
    },
}
StmtFn {
    name: IdentId {
        raw: 1,
    },
    params: [
        IdentId {
            raw: 2,
        },
    ],
    body: Block {
        body: [],
        tail: None,
    },
}
