src/parser_bump/snapshots/simp__parser_bump__tests__tests__inputs__valid__stmt_let.snap
---
source: src/parser_bump/tests.rs
expression: parse(&input)
---
StmtLet {
    name: IdentId {
        raw: 1,
    },
    value: ExprInt {
        value: 0,
    },
}
